--- a/hugo.toml
+++ b/hugo.toml
@@ -10,7 +10,7 @@ theme = "LoveIt"
 
 # website title
 
-title = "My New Hugo Site"
+title = "Lachies Library"
 
 
 
@@ -32,7 +32,7 @@ languageName = "English"
 
     weight = 1
 
-    identifier = "posts"
+    identifier = "Blog"
 
     # you can add extra information before the name (HTML format is supported), such as icons
 
