--- a/hugo.toml
+++ b/hugo.toml
@@ -106,8 +106,13 @@ languageName = "English"
     # LoveIt NEW | 0.2.0 Header title config
     [params.header.title]
       # title name
-      name = "Lachie's Library"
-
+      name = "Lachie's Personal Blog"
+      # you can add extra information before the name (HTML format is supported), such as icons
+      pre = ""
+      # you can add extra information after the name (HTML format is supported), such as icons
+      post = ""
+      # LoveIt NEW | 0.2.5 whether to use typeit animation for title name
+      typeit = True
 
 
   [params.footer]
