--- a/hugo.yaml
+++ b/hugo.yaml
@@ -35,9 +35,9 @@ params:
   ShowShareButtons: false
   ShowPostNavLinks: false
   ShowBreadCrumbs: true
-  ShowCodeCopyButtons: false
+  ShowCodeCopyButtons: true
   ShowWordCount: true
-  ShowRssButtonInSectionTermList: true
+  ShowRssButtonInSectionTermList: false
   UseHugoToc: true
   disableSpecial1stPost: false
   disableScrollToTop: false
@@ -78,16 +78,13 @@ params:
 
   # home-info mode
   homeInfoParams:
-    Title: "Welcome to Lachie's Library \U0001F4DA"
-    Content: Welcome to my blog
+    Title: "Welcome To Lachie's Library \U0001F4DA"
+    Content: Welcome! My name is Lachie, I am a professional 3D artist and game developer. HOWEVER! **This** website is **not** for that. This website is where you can find all the random side quests and hobbies I am working on that I have decided are worth sharing, Including but not limited to; D&D things such as my own house rules and custom resources I have hosted here to share with other DMs, Some of my favourite recipes, random tech stuff, and more! I hope you enjoy your stay.
 
   socialIcons:
-    - name: x
-      url: "https://x.com/"
-    - name: stackoverflow
-      url: "https://stackoverflow.com"
-    - name: github
-      url: "https://github.com/"
+    - name: Bluesky
+      url: "https://bsky.app/profile/lachiesteere.bsky.social"
+
 
   analytics:
     google:
@@ -121,13 +118,25 @@ menu:
       url: /search
       weight: 10
     - identifier: tags
-      name: tags
+      name: Posts - Sorted by type
       url: /tags/
       weight: 20
-    - identifier: example
-      name: example.org
-      url: https://example.org
+    - identifier: allPosts
+      name: Posts - Sorted by Date
+      url: /posts/
       weight: 30
+    - identifier: myart
+      name: Check Out My Art!
+      url: https://lachiesteere.art/
+      weight: 60
+    - identifier: dndPosts
+      name: D&D Posts
+      url: /tags/dnd
+      weight: 40
+    - identifier: dndResources
+      name: D&D Resources
+      url: https://github.com/PybroLachie/LachiesLibrary-Files/tree/main/Resources/D%26D/PrintableTerrain
+      weight: 50
 # Read: https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#using-hugos-syntax-highlighter-chroma
 pygmentsUseClasses: true
 markup:
